<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ModbusActivity" >
        
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	    
        <Button android:id="@+id/button_connection"
            android:text="@string/str_button_connect"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        
        <Button android:id="@+id/button_disconnection"
            android:text="@string/str_button_disconnect"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        
        <TextView android:id="@+id/label_connectedness"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/str_info_disconnected" />
    </LinearLayout>
    
    <RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/label_ref"
	        android:layout_width="40dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:text="@string/str_label_ref" />

	    <EditText
	        android:id="@+id/edit_ref"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/label_ref"
	        android:layout_toEndOf="@+id/label_ref"
	        android:inputType="number"
	        android:text="@string/str_edittext_ref" />
	</RelativeLayout>
	
    <RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/label_value"
	        android:layout_width="40dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:text="@string/str_label_value" />

	    <EditText
	        android:id="@+id/edit_value"
	        android:text="@string/str_edittext_value"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/label_value"
	        android:inputType="number"
	        android:layout_toEndOf="@+id/label_value"
	         />
	</RelativeLayout>
	
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	    
	    <Button 
	        android:id="@+id/button_write"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/str_button_write"
	         />
		
	    <Button 
	        android:id="@+id/button_read"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/str_button_read"
	         />
		
	    <Button 
	        android:id="@+id/button_clear_log"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_button_clear_log"
			/>
	    
	    <TextView android:id="@+id/label_empty"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
    </LinearLayout>
    
    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
	    
        <LinearLayout android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:text="@string/str_textview_target"
	             />
            <TextView 
                android:id="@+id/text_target"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	             />
        </LinearLayout>
        
        <LinearLayout android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:text="@string/str_textview_go"
	             />
            <TextView 
                android:id="@+id/text_go"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	             />
        </LinearLayout>
        
        <LinearLayout android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:text="@string/str_textview_status"
	             />
            <TextView 
                android:id="@+id/text_status"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	             />
        </LinearLayout>
        
    </LinearLayout>
        
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >
	    <TextView android:id="@+id/text_error"
	        android:maxLines = "10"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        />
    </ScrollView>

</LinearLayout>
